[package]
name = "soa_bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
soa_derive = "0.10.0"

[dev-dependencies]
bencher = "0.1.5"
num = "0.4.0"

[[bench]]
name = "mem_layout"
harness = false
